# metabodecon-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: Cargo.toml  deconvoluter.rs  read_bruker.rs  read_hdf5.rs  read_jcampdx.rs  workspace_dir.rs
data/: sim.h5
data/bruker/blood/blood_01/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues
data/bruker/blood/blood_02/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues
data/bruker/blood/blood_03/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues
data/bruker/blood/blood_04/10/: acqu  acqum  acqus  audita.txt  fq1list  precom.output  scon2  shimvalues
data/bruker/blood/blood_05/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues  uxnmr.par
data/bruker/blood/blood_06/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues  specpar
data/bruker/blood/blood_07/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues
data/bruker/blood/blood_08/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues  vtc_pid_settings
data/bruker/blood/blood_09/10/: acqu  acqum  acqus  audita.txt  precom.output  scon2  shimvalues
data/bruker/sim/sim_01/: lorentzians.csv
data/bruker/sim/sim_02/: lorentzians.csv
data/bruker/sim/sim_03/: lorentzians.csv
data/bruker/sim/sim_04/: lorentzians.csv
data/bruker/sim/sim_05/: lorentzians.csv
data/bruker/sim/sim_06/: lorentzians.csv
data/bruker/sim/sim_07/: lorentzians.csv
data/bruker/sim/sim_08/: lorentzians.csv
data/bruker/sim/sim_09/: lorentzians.csv
data/bruker/sim/sim_10/: lorentzians.csv
data/bruker/sim/sim_11/: lorentzians.csv
data/bruker/sim/sim_12/: lorentzians.csv
data/bruker/sim/sim_13/: lorentzians.csv
data/bruker/sim/sim_14/: lorentzians.csv
data/bruker/sim/sim_15/: lorentzians.csv
data/bruker/sim/sim_16/: lorentzians.csv
data/hdf5/: urine.h5
data/jcamp-dx/: BRUKAFFN.dx  BRUKDIF.dx  BRUKNTUP.dx  BRUKPAC.dx  BRUKSQZ.dx
data/jcamp-dx/blood/: blood_01.dx  blood_02.dx  blood_03.dx  blood_04.dx  blood_05.dx  blood_06.dx  blood_07.dx  blood_08.dx  blood_09.dx  blood_10.dx  blood_11.dx  blood_12.dx  blood_13.dx  blood_14.dx  blood_15.dx  blood_16.dx
data/jcamp-dx/test/v5/: ntuples_difdup.dx  ntuples_pac.dx  ntuples_sqz.dx  xydata_affn.dx  xydata_difdup.dx  xydata_pac.dx  xydata_sqz.dx
data/jcamp-dx/test/v6/: ntuples_affn.dx  ntuples_difdup.dx  ntuples_pac.dx  ntuples_sqz.dx  xydata_affn.dx  xydata_difdup.dx  xydata_pac.dx  xydata_sqz.dx
metabodecon/: Cargo.toml
metabodecon-bindings/: Cargo.toml
metabodecon-bindings/src/: lib.rs
metabodecon-python/: Cargo.toml  pyproject.toml
metabodecon-python/examples/: aligner.py  deconvoluter.py  lorentzian.py  parameter_optimization.py  spectrum.py
metabodecon-python/metabodecon/: __init__.py  _metabodecon.pyi  exceptions.pyi
metabodecon-python/src/: bindings.rs  error.rs  lib.rs
metabodecon-python/src/bindings/: aligner.rs  alignment.rs  deconvoluter.rs  deconvolution.rs  lorentzian.rs  spectrum.rs
metabodecon/benches/: deconvoluter.rs
metabodecon/data/: sim.h5
metabodecon/example_data/: sim.h5
metabodecon/src/: alignment.rs  data.rs  data_structures.rs  deconvoluter.rs  deconvolution.rs  error.rs  fitting.rs  lib.rs  lorentzian.rs  macros.rs  parameter_optimization.rs  peak_selection.rs  preprocessing.rs  settings.rs  smoothing.rs  spectrum.rs
metabodecon/src/alignment/: aligner.rs  alignment.rs  assignment.rs  error.rs  feature.rs  solving.rs
metabodecon/src/alignment/assignment/: assignment_chain.rs  distance_similarity_filter.rs  filter.rs  similarity.rs
metabodecon/src/alignment/feature/: assignment.rs  feature_layer.rs  feature_map.rs  feature_point.rs  pairwise_strategy.rs  reference_strategy.rs  strategy.rs
metabodecon/src/alignment/solving/: alignment_problem.rs  feature_variable.rs  solver.rs  solver_linear_programming.rs  variable_map.rs
metabodecon/src/data/: deconvolution.rs  lorentzian.rs  peak.rs  spectrum.rs
metabodecon/src/data_structures/: deconvolution.rs  lorentzian.rs  peak.rs  spectrum.rs
metabodecon/src/deconvolution/: deconvoluter.rs  deconvolution.rs  error.rs  fitting.rs  lorentzian.rs  peak_selection.rs  serialized_representations.rs  settings.rs  smoothing.rs
metabodecon/src/deconvolution/fitting/: fitter.rs  fitter_analytical.rs  lorentzian.rs  peak_stencil.rs  peak_stencil_data.rs  reduced_spectrum.rs
metabodecon/src/deconvolution/peak_selection/: common.rs  detector.rs  detector_only.rs  noise_score_filter.rs  scorer.rs  selector.rs
metabodecon/src/deconvolution/serialized_representations/: serialized_deconvolution.rs  serialized_lorentzian.rs
metabodecon/src/deconvolution/smoothing/: circular_buffer.rs  identity.rs  moving_average.rs  smoother.rs
metabodecon/src/fitting/: fitter.rs  fitter_analytical.rs  lorentzian.rs  peak_stencil_data.rs  reduced_spectrum.rs
metabodecon/src/macros/: check_spectrum.rs  sim_spectrum.rs  thread_safety.rs
metabodecon/src/parameter_optimization/: optimizer.rs
metabodecon/src/peak_selection/: detection.rs  detector.rs  error.rs  filtering.rs  noise_score_filter.rs  peak.rs  scorer.rs  selection.rs  selector.rs  selector_default.rs
metabodecon/src/smoothing/: circular_buffer.rs  ma.rs  ma_simple.rs  ma_sum_cache.rs  mod.rs  moving_average.rs  moving_average_simple.rs  moving_average_sum_cache.rs  sm.rs  sm_ma.rs  smoother.rs  smoother_moving_average.rs  sum_cache_ma_sm.rs
metabodecon/src/spectrum/: bruker_reader.rs  error.rs  formats.rs  hdf5_reader.rs  jdx_reader.rs  macros.rs  meta.rs  regex_capture_macros.rs  serialized_spectrum.rs  spectrum.rs
metabodecon/src/spectrum/formats/: bruker.rs  extract_capture.rs  hdf5.rs  jcampdx.rs
metabodecon/src/spectrum/meta/: acquisition_mode.rs  monotonicity.rs  nucleus.rs  reference.rs  solvent.rs
metabodecon/tests/: aligner.rs  common.rs  deconvoluter.rs  hdf5.rs  integration_test.rs  par_deconvoluter.rs  parsing.rs  utilities.rs
metabodecon/tests/common/: mod.rs  read_example_data.rs
(+144 files in other folders)
