[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"
license = "GPL-3"

[dependencies]
metabodecon = { path = "../metabodecon", features = ["default"] }
criterion = "0.5.1"

[lints]
workspace = true

[[bench]]
name = "deconvoluter"
path = "deconvoluter.rs"
harness = false

[[bench]]
name = "read_bruker"
path = "read_bruker.rs"
harness = false

[[bench]]
name = "read_hdf5"
path = "read_hdf5.rs"
harness = false
