[package]
name = "metabodecon-python"
version = "0.1.0"
authors = ["Maximilian Sombke <sombkemaximilian@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"
description = """
    Python bindings for the metabodecon Rust library crate.
"""
readme = "../README.md"
repository = "https://github.com/SombkeMaximilian/metabodecon-rust"
license = "GPL-3"
keywords = [
    "bioinformatics",
    "metabolomics",
    "nmr",
    "deconvolution",
]
categories = [
    "science::bioinformatics",
    "mathematics",
    "data-structures",
]
publish = false

[lib]
name = "_metabodecon"
crate-type = ["cdylib"]

[dependencies]
metabodecon = { path = "../metabodecon", features = ["full"] }
numpy = "0.23.0"
pyo3 = { version = "0.23.5", features = ["extension-module"] }
serde = "1.0.218"
serde_json = "1.0.140"
rmp-serde = "1.3.0"

[lints]
workspace = true
