[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "metabodecon"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = [
    "version",
    "readme",
    "description",
]

[tool.maturin]
bindings = "pyo3"
module-name = "metabodecon._metabodecon"
features = ["pyo3/extension-module"]
