[package]
name = "metabodecon"
version = "0.1.0"
authors = ["Maximilian Sombke <sombkemaximilian@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"
description = """
    An implementation of the 1D NMR spectra deconvolution algorithm by Koh et al. (2009) in Rust.
"""
readme = "../README.md"
repository = "https://github.com/SombkeMaximilian/metabodecon-rust"
license = "GPL-3"
keywords = [
    "bioinformatics",
    "metabolomics",
    "nmr",
    "deconvolution",
]
categories = [
    "science::bioinformatics",
    "mathematics",
    "data-structures",
]

[features]
default = ["parallel"]
full = ["parallel"]
parallel = ["rayon"]

[dependencies]
byteorder = "1.5.0"
num-traits = "0.2.19"
regex = "1.11.1"
hdf5 = "0.8.1"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
"float-cmp" = "0.10.0"

[lints]
workspace = true
