[package]
name = "metabodecon"
version = "0.1.0"
authors = ["Maximilian Sombke <sombkemaximilian@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"
description = """
    A library for 1D NMR spectra, offering data structure definitions,
    common NMR file format parsing (Bruker TopSpin, JCAMP-DX, HDF5),
    preprocessing, signal deconvolution, and spectrum alignment.
"""
readme = "../README.md"
repository = "https://github.com/SombkeMaximilian/metabodecon-rust"
license = "GPL-3"
keywords = [
    "bioinformatics",
    "metabolomics",
    "nmr",
    "deconvolution",
]
categories = [
    "science::bioinformatics",
    "mathematics",
    "data-structures",
]

[features]
default = ["parallel", "bruker", "hdf5", "jdx"]
full = ["parallel", "bruker", "hdf5", "jdx", "serde"]
parallel = ["dep:rayon"]
bruker = ["dep:byteorder", "dep:regex"]
hdf5 = ["dep:hdf5"]
jdx = ["dep:regex"]
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2.19"
regex = { version = "1.11.1", optional = true }
byteorder = { version = "1.5.0", optional = true }
hdf5 = { version = "0.8.1", optional = true }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }

[dev-dependencies]
float-cmp = "0.10.0"
serde_json = "1.0.138"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
